--- a/templates/home.html
+++ b/templates/home.html
@@ -3,11 +3,13 @@
 <h3>Home Page</h3>
 
 {% if user.is_authenticated %}
+<h4><a href="{% url 'article_list'%}">article list</a></h4>
 <p>Hello, {{user.username}}</p>
 <a href={% url 'logout' %}>> log out</a>
 <p><a href="{% url 'password_change'%}">> change password</a></p>
 {% else %}
 <p>You have not log in yet</p>
+<p>Please log in to create new article and see the articles list </p>
 <a href="{% url 'login'%}">> log in</a>
 <p>dont have an account?</p>
 <a href="{% url 'signup' %}">> sign up</a>
