--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -2,7 +2,7 @@
 {% block content %}
 <h4>- {{article.title}}</h4>
 <p>""{{article.body}}""</p>
-<p>created by : {{article.author}}</p>
+<p>created by : {{article.author}} on {{article.date_time}}</p>
 <p><a href="{% url 'article_edit' article.pk%}">edit</a>  |  <a href="{% url 'article_delete' article.pk%}">delete</a></p>
 <p><a href="{% url 'article_list' %}">Back to article list</a></p>
 {% endblock content %}
