--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
 <a href={% url 'logout' %}>> log out</a>
 <p><a href="{% url 'password_change'%}">> change password</a></p>
 {% else %}
-<p>You have not log in yet</p>
+<p>You have not loged in yet</p>
 <p>Please log in to create new article and see the articles list </p>
 <a href="{% url 'login'%}">> log in</a>
 <p>dont have an account?</p>
